# liblog

./: CMakeLists.txt  README.md  THIRD_PARTY.md  dependencies.yaml
.ci/build-kit/: install_and_test.sh
.ci/build-kit/scripts/: compile.sh  install.sh  run_coverage.sh  run_unit_tests.sh
.github/workflows/: build_and_test.yaml
examples/: logging.ini  main.cpp  test_trace.cpp
include/everest/: exceptions.hpp  logging.hpp  rotating_file_sink.hpp
include/everest/logging/: exceptions.hpp  logging.hpp
lib/: CMakeLists.txt  logging.cpp  trace.cpp
tests/: CMakeLists.txt  liblog_test.cpp
tests/logging_configs/: console.ini  console_crit.ini  console_debg.ini  console_defaults.ini  console_erro.ini  console_info.ini  console_warn.ini  no_sinks.ini  syslog.ini  textfile_crit.ini  textfile_debg.ini  textfile_erro.ini  textfile_info.ini  textfile_off.ini  textfile_verb.ini  textfile_verb_broken_filename.ini  textfile_verb_broken_format_string.ini  textfile_verb_rotate.ini  textfile_verb_rotate_on_open.ini  textfile_warn.ini
